# leptos-conway-game-of-life

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
src/: grid.rs  main.rs  modal.rs
